[package]
name = "survival"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking", "wayland"] }
bevy-inspector-egui = { version = "0.23.4", features = ["highlight_changes"] }
bevy_rapier2d = { version = "0.25.0", features = ["debug-render-2d"] }
noise = "0.8.2"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
